--- a/templates/applications.html
+++ b/templates/applications.html
@@ -5,6 +5,12 @@
 <body>
   <h2>📋 Applied Jobs</h2>
 
+  <p>
+    <a href="{{ url_for('export_applications') }}">
+      🧾 Export My Applications as CSV
+    </a>
+  </p>
+
   <h3>✅ Applied Automatically</h3>
   <table border="1" cellpadding="8">
     <tr>
