Fix export to CSV: include only applied and applied_manual jobs

--- a/templates/applications.html
+++ b/templates/applications.html
@@ -7,7 +7,7 @@
 
   <p>
     <a href="{{ url_for('export_applications') }}">
-      🧾 Export My Applications as CSV
+      📥 Download My Applied Jobs as CSV
     </a>
   </p>
 
